Add DataTable & AJAX v0.2

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,7 +1,7 @@
 app.title=Голосование за ресторан
 app.footer=Приложение сделал <a href="https://dementevay.github.io/" target=_blank>Дементьев Андрей</a> в качестве <a href="https://github.com/dementevay/Choosearestaurant" target=_blank>тестового задания</a> (2017)
 app.enter=Войти как
-app.profile=профиль
+app.profile=Стоимость
 app.register=Регистрирация
 app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
 users.title=Пользователи
@@ -39,9 +39,9 @@ meal.startDate=От даты
 meal.endDate=До даты
 meal.startTime=От времени
 meal.endTime=До времени
-meal.description=Описание
+meal.description=Ресторан
 meal.dateTime=Дата/Время
-meal.calories=Калории
+meal.meal_cost=Блюдо : цена
 
 common.add=Добавить
 common.deleted=Запись удалена
@@ -62,3 +62,5 @@ Email=Неверный формат поля {0}
 Range=Поле {0} должно быть между {2} и {1}
 Length=Длинна поля {0} должена быть между {2} и {1}
 SafeHtml=Поле {0} может содержать небезопасный html контент
+
+restaurants.edit=Редактирование
